# tuyaSwitchApi

./: .gitignore  Zigbee_get_last.py  app.py  app_V_old.py  build.py  hello.py  pyproject.toml  tuya.db
static/: index.css
templates/: index.html  schedule.html  scheduleTest.html  settings.html
tuya_server/: client.py  models.py  security.py  server.py
tuya_server/routes/: api.py  web.py
