[project]
name = "tuyaserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.11.2",
    "flask>=3.1.2",
    "flask-restful>=0.3.10",
    "pyinstaller>=6.18.0",
    "requests>=2.32.5",
    "tinytuya>=1.17.4",
    "waitress>=3.0.2",
]
